--- a/resume.html
+++ b/resume.html
@@ -32,12 +32,13 @@
     <p>
       UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guides—all tailored to the needs of School of Information students and aligned with employer expectations.
     </p>
+    <img src="images/UMSI_CareerFair_02062025_06.jpg" alt="A student looking at the resume" width="500">
   </section>
   
   <section>
     <h2>Resume Writing Made Easy: Steps to Success</h2>
     <ol>
-      <li><strong>Download a UMSI-Approved Templat:</strong> Start with a format that works—no need to design from scratch.</li>
+      <li><strong>Download a UMSI-Approved Template:</strong> Start with a format that works—no need to design from scratch.</li>
       <li><strong>Gather Your Experiences:</strong> List jobs, internships, volunteer roles, coursework, and projects most relevant to your goals.</li>
       <li><strong>Write Impactful Bullets:</strong> Use action verbs and highlight your skills, results, and unique contributions in ways employers notice.</li>
       <li><strong>Tailor for Each Opportunity:</strong> Customize your resume for every job or internship you pursue.</li>
@@ -105,6 +106,7 @@
       </li>
     </ul>
   </section>
+  <!-- Content taken & from UMGPT with the prompt, "extract links from the following html contents and summarize what the links are about: [html contents of https://umich.instructure.com/courses/137916/modules]"-->
 
   <section>
     <h2>Resume FAQ</h2>
@@ -129,6 +131,7 @@
   </section>
           <!-- Content taken & modified from UMGPT with the prompt, "for the same content write me some intro content and resources for a resume page" - this was after I had asked for content for the home page.
         UMGPT. (2025). UMGPT (GPT-4.1 August 25th version) [Large language model]. -->
+
 
     
         <div></div>
