--- a/index.html
+++ b/index.html
@@ -38,46 +38,71 @@
         <li><strong>Everything in One Place:</strong> Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
         <li><strong>Student-Focused Navigation:</strong> Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
         <li><strong>Guidance Backed by Experts:</strong> All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-        <li><strong>Always Accessible:</strong> Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
-        <li><strong>Modern Support, UMSI Excellence:</strong> We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
+        <li><strong>Always Accessible:</strong> Visit the site anytime, from any device. We're committed to meeting the accessibility needs of all students.</li>
+        <li><strong>Modern Support, UMSI Excellence:</strong> We benchmark against top peer institutions and integrate UMSI's unique support, showcasing our commitment to your success.</li>
       </ul>
     </section>
-        <section>
+    <section>
       <h2>Start Here</h2>
-      <div>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
-        <ul>
-            <li><a href="resume.html">Resumes</a></li>
-            <li><a href="network.html">Networking & Connections</a></li>
-            <li><a href="search.html">Planning Your Job/Internship Search</a></li>
-        </ul>
+      <div class="start_here">
+        <a href="resume.html"><img src="images/Resumes.png" alt="Resumes button." width="400"></a>
+
+        <a href="network.html"><img src="images/Network.png" alt="Network button." width="400"></a></li>
+        <a href="search.html"><img src="images/Job_Search.png" alt="Search button." width="400"></a></li>
+
       </div>
 
-      <aside>
         <h3>Most Popular Resources</h3>
         <ul>
-          <li><a href="https://umich.instructure.com/courses/137916/modules/items/799192" target="_blank">UMSI Resume Guide & Rubric</a></li>
-          <li><a href="https://umich.instructure.com/courses/137916/modules/items/1379181" target="_blank">Intro to Making Connections</a></li>
-          <li><a href="https://umich.instructure.com/courses/137916/modules/items/1379177" target="_blank">Intro to Interviewing</a></li>
-          <li><a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">Attend an Event</a></li>
-          <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
+          <li><a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?tab=t.0" target="_blank">UMSI Resume Guide</a></li>
+          <li><a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">Attend a Career Event</a></li>
+          <li><a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0" target="_blank">Networking Tips</a></li>
+          <li><a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing"target="_blank">Interview Preparation</a></li>
+          <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI's Exclusive Career Portal</a></li>
         </ul>
-      </aside>
+
     </section>
+
 
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
       <p>
-        The UMSI Career Development Office (CDO) offers personalized support through 
-        <a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank">appointments with a career coach</a>, 
-        <a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">events</a>, and resource guides. 
-        You can also <a href="https://www.si.umich.edu/about-umsi/getting-umsi" target="_blank">visit us on campus</a> or 
-        <a href="https://www.si.umich.edu/student-experience/career-development" target="_blank">learn more about us online</a>.
+        You're not alone in your job search—our team is here to guide you every step of the way. 
+        Explore the options below and choose the support that works best for you:
       </p>
+
+      <div class="cdo-grid">
+        <figure>
+        <a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank" class="cdo-card">
+          <img src="images/UMSI_062025_LeinweberDetails_006.jpg" alt="Meet with a career coach" width="300">
+        </a>
+        <figcaption>Meet with a career coach
+        </figure>
+        
+        <figure>
+        <a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank" class="cdo-card">
+          <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.jpg" alt="Attend a CDO event" width="300">
+        </a>
+        <figcaption>Attend an event
+        </figure>
+
+        <figure>
+        <a href="https://www.si.umich.edu/about-umsi/getting-umsi" target="_blank" class="cdo-card">
+          <img src="images/UMSI_Leinweber_06032025_13.jpg" alt="Visit CDO on campus" width="300">
+        </a>
+        <figcaption>Visit us on campus
+        </figure>
+
+        <figure>
+        <a href="https://www.si.umich.edu/student-experience/career-development" target="_blank" class="cdo-card">
+          <img src="images/FLINT_First Day of Class_0014.jpg" alt="Learn more online" width="300">
+        </a>
+        <figcaption>Learn more online
+        </figure>
+      </div>
     </section>
-       
-        <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
-        UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
+    <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
+    UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
