--- a/network.html
+++ b/network.html
@@ -1,30 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MSI Career Development Resource Hub</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Networking and Building Connections</title>
 </head>
 <body>
 
-    <header>
-        <a href = "#maincontent">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "network.html">Networking & Connections</a></li>
-                <li><a href = "search.html">Planning Your Job/Internship Search</a></li>
-            </ul>
-        </nav>
-        <h1>Networking and Building Connections</h1>
-    </header>
-    <main id="maincontent">     
+  <header>
+    <a href="#maincontent">Skip to Main Content</a>
+    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resumes</a></li>
+        <li><a href="network.html">Networking & Connections</a></li>
+        <li><a href="search.html">Planning Your Job/Internship Search</a></li>
+      </ul>
+    </nav>
+    <h1>Networking and Building Connections</h1>
+  </header>
 
-    </main>
-    <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-    </footer>
+  <main id="maincontent">
+    
+    <section>
+      <h2>Build Your Network, Build Your Future</h2>
+      <p>
+        Networking is not just about landing your next job or internship—it's about building a community of support, learning, and mutual opportunity throughout your career. At UMSI, our resources are designed to help you develop confidence, strategy, and authenticity in your networking journey.
+      </p>
+      <p>
+        On this page, you'll find strategies, tools, and examples to help you grow meaningful professional connections and prepare for career fairs, conferences, and outreach opportunities. These resources are designed specifically for UMSI students and tailored to employer expectations.
+      </p>
+      <img src="images/UMSI_CareerFair2020_04.jpg" alt="Students in a conference room in the Michigan League." width="500">
+      <img src="images/UMSI_CareerFair2020_09.jpg" alt="A short conversation in career fair." width="500">
+    </section>
+
+    <section>
+      <h2>Strategic Networking</h2>
+      <p>
+        A strong network starts with a thoughtful strategy. At UMSI, setting clear goals, identifying key contacts, and planning your approach are essential steps to making networking both effective and rewarding.
+      </p>
+      <ul>
+        <li>
+          <a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Building a List for Strategic Networking</a> - develop and organize your list of potential networking contacts.
+        </li>
+        <li>
+          <a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Intro to Making Connections</a> - conversation tips, networking etiquette, and follow-up strategies.
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.f7yduyb84h87" target="_blank" rel="noopener">AI Prompt Resource Guide: Networking</a> - how AI tools like ChatGPT can help brainstorm networking messages, introductions, and meeting questions.
+        </li>
+        <li>
+          <a href="https://umich.peoplegrove.com/hub/ucan/home" target="_blank" rel="noopener">University Career Alumni Networking (UCAN)</a> - connect with Michigan alumni for mentorship, informational interviews, and professional growth.
+        </li>
+        <li>
+          <a href="https://docs.google.com/document/d/1633aBaWXIZW_ImTP-jKKN0QNXK9-RpXXmVznRgA4ZHQ/edit?usp=sharing" target="_blank" rel="noopener">Elevator Pitch Rubric</a> - guidance for crafting and practicing a strong self-introduction.
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Conference and Career Fair Preparation</h2>
+      <p>
+        Conferences and career fairs are prime opportunities to meet professionals and recruiters. Use these resources to plan ahead and make a strong impression.
+      </p>
+      <ul>
+        <li>
+          <a href="https://docs.google.com/presentation/d/1dwwMvJIaR2lH_t25Pwnw8otHhWx3ww_46mWm3bARzo8/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Conference Prep Workshop</a> - strategies to prepare for and navigate conferences successfully.
+        </li>
+        <li>
+          <a href="https://docs.google.com/spreadsheets/d/1JtqyC7YSip571jGJjw8JTzCfQSQQX-VmIV4KS_PZ1EE/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Conference Preparation Template</a> - a planning tool to organize conference goals, sessions, and contacts.
+        </li>
+        <li>
+          <a href="https://docs.google.com/presentation/d/1ZQG4dY5Let1iot2GuKhV1mO_vgbvxv4YTNE2HP2qqf8/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] 2024 Career Fair Prep</a> - tips for making a strong impression at the UMSI career fair.
+        </li>
+        <li>
+          <a href="https://www.dropbox.com/scl/fi/1it97skwtspcm2yuhf8qq/Winter-2024_Career-Fair-Prep-Workshop.mp4?rlkey=we1hk8fy3dr9tgtvgvo0bh4dn&dl=0" target="_blank" rel="noopener">[Recording] 2024 Career Fair Prep Workshop</a> - video recording of the workshop for review and practice.
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Outreach Communication</h2>
+      <p>
+        Effective outreach messages can open doors to new opportunities. Use these guides and tools to craft professional, clear, and authentic communication.
+      </p>
+      <ul>
+        <li>
+          <a href="https://docs.google.com/document/d/1cwq2KtdKQbO-tICHKUyKRA3QY4_3VJ8NLC2kwPBY4dI/edit?usp=sharing" target="_blank" rel="noopener">[Handout] Networking Outreach Email Examples</a> - sample emails to guide your outreach to professionals and alumni.
+        </li>
+        <li>
+          <a href="https://resumeworded.com/networking-email-templates/" target="_blank" rel="noopener">Networking Email Templates from Resume Worded</a> - ready-to-use examples of outreach emails for different scenarios.
+        </li>
+        <li>
+          Lettersmith - Support for Professional Communication:
+          <ul>
+            <li><a href="https://youtu.be/9IDVnvOd8cY" target="_blank" rel="noopener">Tool Introduction (Video)</a> - short video overview of how to use Lettersmith effectively.</li>
+            <li><a href="https://docs.google.com/document/d/1XbQsIwQ8zbqqqeFeZmrAvsHuBd9ppSoyL_Ty7Fe0TGA/edit" target="_blank" rel="noopener">Quick Reference Guide (Handout)</a> - step-by-step guide for drafting messages with Lettersmith.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Informational Interviews</h2>
+      <p>
+        Informational interviews are an opportunity to learn from professionals, ask insightful questions, and leave a positive impression as you explore your field. Make the most of these conversations by researching your contacts, preparing meaningful questions, and showing genuine curiosity and professionalism.
+      </p>
+      <ul>
+        <li>
+          <a href="https://docs.google.com/presentation/d/1QR0UA8V4d_hjHuayVbzF5_bx8d_8m3Ohvx9e5SiBodg/edit?usp=sharing" target="_blank" rel="noopener">[Workshop Slides] Informational Interviews Using TIARA</a> - framework for structuring conversations to maximize learning and connection.
+        </li>
+        <li>
+          <a href="/courses/137916/modules/items/2944812" target="_blank" rel="noopener">[Handout] Informational Interviews - TIARA Method (requires login)</a> - printable resource for preparing and guiding informational interviews.
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Networking FAQ</h2>
+      <ul>
+        <li><strong>Do I need to network even if I'm not job searching?</strong><br> Yes—building relationships early helps you access support, advice, and opportunities later.</li>
+        <li><strong>What if I'm nervous about reaching out?</strong><br> Start small with classmates, faculty, and alumni. Using templates can help you feel more confident.</li>
+        <li><strong>How often should I follow up?</strong><br> Send a thank-you note within 24-48 hours, and keep in touch periodically to maintain the connection.</li>
+        <li><strong>Can AI tools really help?</strong><br> Yes—generative AI can suggest outreach messages or questions, but always review and personalize before sending.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Ready to Connect?</h2>
+      <p>
+        Use these resources as your toolkit for building relationships. Reach out to classmates, alumni, staff, and professionals—remember, the Michigan Networking community is here to support you! If you have any questions, <a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank">meet with a career coach</a>.
+      </p>
+    </section>
+    <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage - this is for Networking and Building Connections, use the links provided below": and then pasted in the html contents of connections part in https://umich.instructure.com/courses/137916/modules"
+    UMGPT. (2025). UMGPT ( GPT-4.1 Sep 5th version) [Large language model]. -->
+  </main>
+
+  <footer>
+    <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office</a></p>
+  </footer>
+
 </body>
 </html>
