--- a/resume.html
+++ b/resume.html
@@ -27,12 +27,13 @@
   <section>
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
-      Your resume is often your first impression—an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether you’re starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
+      Your resume is often your first impression—an opportunity to highlight your unique strengths, skills, and experiences to potential employers. Whether you're starting from scratch or looking to polish an existing resume, these resources are here to help you every step of the way.
     </p>
     <p>
       UMSI students are in high demand, and a clear, well-organized resume will help you stand out among applicants. On this page, you'll find practical tips, templates, and guides—all tailored to the needs of School of Information students and aligned with employer expectations.
     </p>
     <img src="images/UMSI_CareerFair_02062025_06.jpg" alt="A student looking at the resume" width="500">
+    <img src="images/umsi_careerfair.1.26.2309.jpg" alt="A student handing the resume" width="500">
   </section>
   
   <section>
@@ -74,19 +75,19 @@
     </p>
     <ul>
       <li>
-        <a href="https://docs.google.com/document/d/1-EVZYH_Fic4mfLVGOXyHTSeRwBWmmi2WHSgGDLGGPEs/edit?usp=sharing" target="_blank">How to Write Impactful Bullets</a> – strategies for action verbs and results-driven descriptions.
+        <a href="https://docs.google.com/document/d/1-EVZYH_Fic4mfLVGOXyHTSeRwBWmmi2WHSgGDLGGPEs/edit?usp=sharing" target="_blank">How to Write Impactful Bullets</a> - strategies for action verbs and results-driven descriptions.
       </li>
       <li>
-        <a href="https://youtu.be/x0Dfw4LFWvw" target="_blank">Incorporating Job Descriptions Into Your Resume (Video)</a> – learn how to mirror job posting language for ATS compatibility.
+        <a href="https://youtu.be/x0Dfw4LFWvw" target="_blank">Incorporating Job Descriptions Into Your Resume (Video)</a> - learn how to mirror job posting language for ATS compatibility.
       </li>
       <li>
-        <a href="https://docs.google.com/presentation/d/1zKegYumYvZG0y5vAWU91py8K_cHfAG3f22DUA2e_H9c/edit?usp=sharing" target="_blank">How to Add Course Projects to Your Resume</a> – guidance for showcasing class projects when professional experience is limited.
+        <a href="https://docs.google.com/presentation/d/1zKegYumYvZG0y5vAWU91py8K_cHfAG3f22DUA2e_H9c/edit?usp=sharing" target="_blank">How to Add Course Projects to Your Resume</a> - guidance for showcasing class projects when professional experience is limited.
       </li>
       <li>
-        <a href="https://www.linkedin.com/learning-login/share?account=42573940&amp;forceAccount=false&amp;redirect=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Foptimize-your-resume-for-applicant-tracking-systems%3Ftrk%3Dshare_ent_url%26shareId%3DKWfpgzmsRHKPR%252BG8N%252Fw%252Bkg%253D%253D" target="_blank">Optimize Your Resume for ATS (LinkedIn Learning Webinar)</a> – a free U-M webinar on formatting and keyword optimization for applicant tracking systems.
+        <a href="https://www.linkedin.com/learning-login/share?account=42573940&amp;forceAccount=false&amp;redirect=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Foptimize-your-resume-for-applicant-tracking-systems%3Ftrk%3Dshare_ent_url%26shareId%3DKWfpgzmsRHKPR%252BG8N%252Fw%252Bkg%253D%253D" target="_blank">Optimize Your Resume for ATS (LinkedIn Learning Webinar)</a> - a free U-M webinar on formatting and keyword optimization for applicant tracking systems.
       </li>
       <li>
-        <a href="https://resumeworded.com/umich" target="_blank">Resume Worded</a> – AI-powered instant feedback on resumes, available for U-M students.
+        <a href="https://resumeworded.com/umich" target="_blank">Resume Worded</a> - AI-powered instant feedback on resumes, available for U-M students.
       </li>
     </ul>
 
@@ -96,17 +97,17 @@
     </p>
     <ul>
       <li>
-        <a href="https://docs.google.com/document/d/1vSu1MACWvr6as2WJJowAE1Lq0O0TTrzcc0m10uxn7FI/edit?usp=sharing" target="_blank">UMSI Transfer Student Resume Resource</a> – advice and examples for transfer students adapting their resumes.
+        <a href="https://docs.google.com/document/d/1vSu1MACWvr6as2WJJowAE1Lq0O0TTrzcc0m10uxn7FI/edit?usp=sharing" target="_blank">UMSI Transfer Student Resume Resource</a> - advice and examples for transfer students adapting their resumes.
       </li>
       <li>
-        <a href="https://docs.google.com/presentation/d/1bVkG-fxUVcAHRKBVt_NlDLRf0BIO_ySuVJsObn20RDw/edit?usp=sharing" target="_blank">Academic CV Workshop</a> – materials for students pursuing research or teaching positions, highlighting differences between CVs and resumes.
+        <a href="https://docs.google.com/presentation/d/1bVkG-fxUVcAHRKBVt_NlDLRf0BIO_ySuVJsObn20RDw/edit?usp=sharing" target="_blank">Academic CV Workshop</a> - materials for students pursuing research or teaching positions, highlighting differences between CVs and resumes.
       </li>
       <li>
-        <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.l4j7esgrm5ra" target="_blank">AI Prompt Resource Guide: Resumes</a> – examples of how to use generative AI tools for drafting, revising, and brainstorming resume content.
+        <a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.l4j7esgrm5ra" target="_blank">AI Prompt Resource Guide: Resumes</a> - examples of how to use generative AI tools for drafting, revising, and brainstorming resume content.
       </li>
     </ul>
   </section>
-  <!-- Content taken & from UMGPT with the prompt, "extract links from the following html contents and summarize what the links are about: [html contents of https://umich.instructure.com/courses/137916/modules]"-->
+  <!-- Content taken & from UMGPT with the prompt, "extract links from the following html contents and summarize what the links are about: [html contents of resume part in https://umich.instructure.com/courses/137916/modules]" UMGPT. (2025). UMGPT ( GPT-4.1 Sep 4th version) [Large language model]. -->
 
   <section>
     <h2>Resume FAQ</h2>
@@ -117,7 +118,7 @@
       </li>
       <li>
         <strong>Do I need a different resume for each application?</strong><br>
-        It’s wise to tailor your resume to the requirements and keywords of each opportunity.
+        It's wise to tailor your resume to the requirements and keywords of each opportunity.
       </li>
       <li>
         <strong>Is it okay to include coursework or student projects?</strong><br>
