--- a/search.html
+++ b/search.html
@@ -1,30 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MSI Career Development Resource Hub</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Planning Your Job/Internship Search</title>
 </head>
 <body>
 
-    <header>
-        <a href = "#maincontent">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "network.html">Networking & Connections</a></li>
-                <li><a href = "search.html">Planning Your Job/Internship Search</a></li>
-            </ul>
-        </nav>
-        <h1>Planning Your Job/Internship Search</h1>
-    </header>
-    <main id="maincontent">   
+  <header>
+    <a href="#maincontent">Skip to Main Content</a>
+    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resumes</a></li>
+        <li><a href="network.html">Networking & Connections</a></li>
+        <li><a href="search.html">Planning Your Job/Internship Search</a></li>
+      </ul>
+    </nav>
+    <h1>Planning Your Job/Internship Search</h1>
+  </header>
 
-    </main>
-    <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-    </footer>
+  <main id="maincontent">
+    
+    <section>
+      <h2>Start Strong: Your Job Search Journey</h2>
+      <p>
+        A successful job or internship search is not just about sending applications—it's about taking a strategic approach. Use the resources below to clarify your direction, set goals, and design a pathway toward your next professional step.
+      </p>
+      <p>
+        These guides, worksheets, and templates are designed specifically for UMSI students to help you prepare, organize, and thrive during the recruiting process.
+      </p>
+      <img src="images/UMSI_CareerFair_02062025_04.jpg" alt="Student exploring job opportunities" width="500">
+      <img src="images/UMSI_CareerFair2020_13.jpg" alt="Student speaking with recruiter" width="500">
+    </section>
+
+    <section>
+      <h2>Job Search Roadmap: Steps to Success</h2>
+      <ol>
+        <li><strong>Clarify Your Direction:</strong> Reflect on your goals, values, and interests before beginning your search.</li>
+        <li><strong>Build Your Plan:</strong> Use strategic planning resources to map your search with timelines and milestones.</li>
+        <li><strong>Stay Organized:</strong> Track applications, contacts, and deadlines with spreadsheets and checklists.</li>
+        <li><strong>Leverage Technology:</strong> Use AI and digital tools to draft, refine, and enhance applications.</li>
+        <li><strong>Learn From Experts:</strong> Attend workshops and review slides to sharpen your search strategies.</li>
+      </ol>
+    </section>
+
+    <section>
+    <h2>Job Search Resources</h2>
+    <p>
+        Explore these curated resources to structure, organize, and energize your search. They are grouped to guide you from planning to reflection and execution.
+    </p>
+
+    <h3>1. Get Started With Career Planning</h3>
+    <p>
+        Begin by clarifying your career direction and understanding recruiting timelines so you can move forward with focus and intention.
+    </p>
+    <ul>
+        <li><a href="https://docs.google.com/document/d/1_Mh2N-azjpH-WAf0Z6T51D6ag5ciYw4HpNwc0T6j_rM/edit?usp=sharing" target="_blank">Strategic Job and Internship Plan</a> - build an action plan for your search, including goal-setting and timelines.</li>
+        <li><a href="https://docs.google.com/document/d/19kWFf53hYuAs-aa9igwV87WosoKJa1AsX_OUqLWjENk/edit?usp=sharing" target="_blank">Job & Internship Search Planning Worksheet</a> - reflect on personal interests and organizational fit.</li>
+        <li><a href="https://docs.google.com/document/d/14Q3v3K5_SwgIAbkhCgyX9Vd3JPs9nR245ACvP3Csq5I/edit?usp=sharing" target="_blank">Recruiting Timeline</a> - review industry-specific recruiting cycles to better plan your applications.</li>
+    </ul>
+
+    <h3>2. Organize Your Search Process</h3>
+    <p>
+        Staying organized will help you manage multiple applications, follow-ups, and deadlines without feeling overwhelmed.
+    </p>
+    <ul>
+        <li><a href="https://docs.google.com/spreadsheets/d/1fT4YeP1M5moXtFYniTkyb-CCLV7PZ75B9iJFH-XWMv4/edit?usp=sharing" target="_blank">Job Search Plan & Application Tracker</a> - log applications, contacts, and deadlines.</li>
+        <li><a href="https://docs.google.com/document/d/1fblfjC2Tki2MZOminwoIonvJYJ5tiBTKP8isaCzaIfY/edit?usp=sharing" target="_blank">Job & Internship Search Checklist</a> - step-by-step guidance for a complete search.</li>
+    </ul>
+
+    <h3>3. Reflect On Strengths and Priorities</h3>
+    <p>
+        Self-reflection helps you evaluate what matters most to you in a workplace so that your search aligns with your values and goals.
+    </p>
+    <ul>
+        <li><a href="https://docs.google.com/spreadsheets/d/17ZtvEgIouUYdTgXBk9yI8fZQeAeqhrK9jHB8mF1KLzY/edit?usp=sharing" target="_blank">Identifying Your Workplace Values</a> - clarify what matters to you most in a work environment.</li>
+        <li><a href="https://docs.google.com/document/d/1PXcEpUmqIx0wdJbSFPSGQDrWMRyZEe_YFoQHtKZDko4/edit?usp=sharing" target="_blank">Critical Career Factors Inventory</a> - prioritize factors like compensation, culture, and location.</li>
+    </ul>
+
+    <h3>4. Boost Your Search With Technology & AI</h3>
+    <p>
+        Leverage digital tools and AI to save time, strengthen your applications, and discover new strategies for connecting with employers.
+    </p>
+    <ul>
+        <li><a href="https://docs.google.com/document/d/1C-rxX5VcjVH7YjMdHil1VMo9ZdSOHmausOcX61dld-g/edit#heading=h.tds98meydr4t" target="_blank">AI Prompt Resource Guide</a> - sample prompts for resumes, cover letters, and networking.</li>
+        <li><a href="https://www.dropbox.com/scl/fi/vdtmy0snc3qlt3z4jjpen/LinkedIn-ChatGPT-Secrets_video.mp4?dl=0" target="_blank">LinkedIn & ChatGPT Secrets Recording</a> - strategies for using AI alongside LinkedIn.</li>
+    </ul>
+
+    <h3>5. Attend Workshops & Learn From Experts</h3>
+    <p>
+        Gain insights from career experts and UMSI-led workshops to strengthen your job search strategies and stay ahead in the process.
+    </p>
+    <ul>
+        <li><a href="https://docs.google.com/presentation/d/1CAvzzGn6e7VyjItP8DqWiu44lOfs-KU5vz9ImupaPdY/edit?usp=sharing" target="_blank">Prep for Fall Recruitment</a> - slides and checklists for busy recruiting cycles.</li>
+        <li><a href="https://docs.google.com/presentation/d/1Yw5BFwowlfjZ9KTy-P0AzUdBdx3pyTUYfAGhqEvgtSA/edit#slide=id.g9397362aad_0_15" target="_blank">2 Hour Job Search Workshop</a> - a proven system for networking and applications.</li>
+    </ul>
+    </section>
+
+
+    <section>
+      <h2>Job Search FAQ</h2>
+      <ul>
+        <li><strong>When should I start my search?</strong><br> Ideally, begin at least a semester before your target start date, especially for structured recruiting cycles.</li>
+        <li><strong>Do I need to apply to many jobs?</strong><br> Focus on quality over quantity—target roles that align with your skills and values.</li>
+        <li><strong>Should I use AI in my search?</strong><br> Yes—AI tools can help draft, refine, and organize, but always personalize final applications.</li>
+        <li><strong>How do I balance classes and job search?</strong><br> Set aside weekly blocks of time and use checklists/trackers to stay consistent.</li>
+      </ul>
+    </section>
+
+    <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage - this is for Planning Your Job/Internship Search, use the links provided below": and then pasted in the html contents of job search part in https://umich.instructure.com/courses/137916/modules"
+    UMGPT. (2025). UMGPT ( GPT-4.1 Sep 5th version) [Large language model]. -->
+  </main>
+
+  <footer>
+    <p>University of Michigan School of Information | 
+      <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office</a>
+    </p>
+  </footer>
+
 </body>
 </html>
+
