--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>
         Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <section>
@@ -47,8 +47,8 @@
       <div class="start_here">
         <a href="resume.html"><img src="images/Resumes.png" alt="Resumes button." width="400"></a>
 
-        <a href="network.html"><img src="images/Network.png" alt="Network button." width="400"></a></li>
-        <a href="search.html"><img src="images/Job_Search.png" alt="Search button." width="400"></a></li>
+        <a href="network.html"><img src="images/Network.png" alt="Network button." width="400"></a>
+        <a href="search.html"><img src="images/Job_Search.png" alt="Search button." width="400"></a>
 
       </div>
 
@@ -57,7 +57,7 @@
           <li><a href="https://docs.google.com/document/d/1_1GfDJyVGIgE82MZjVhuWT_aB_2Hcj1NN62FUCXoR_o/edit?tab=t.0" target="_blank">UMSI Resume Guide</a></li>
           <li><a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank">Attend a Career Event</a></li>
           <li><a href="https://docs.google.com/document/d/18HMt79BU8ovGf9z7_P7No5tuwUS6qHNW5u0sgrepLtE/edit?tab=t.0" target="_blank">Networking Tips</a></li>
-          <li><a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing"target="_blank">Interview Preparation</a></li>
+          <li><a href="https://docs.google.com/presentation/d/15n-XqsFEntdbkZz89K-ohf7Or1NnCt5CQNDG-6fh2a0/edit?usp=sharing" target="_blank">Interview Preparation</a></li>
           <li><a href="https://si-umich.12twenty.com/Login" target="_blank">Career Link: UMSI's Exclusive Career Portal</a></li>
         </ul>
 
@@ -76,28 +76,28 @@
         <a href="https://umich.instructure.com/courses/137916/pages/talk-to-a-career-coach" target="_blank" class="cdo-card">
           <img src="images/UMSI_062025_LeinweberDetails_006.jpg" alt="Meet with a career coach" width="300">
         </a>
-        <figcaption>Meet with a career coach
+        <figcaption>Meet with a career coach</figcaption>
         </figure>
         
         <figure>
         <a href="https://umich.instructure.com/courses/137916/pages/attend-an-event" target="_blank" class="cdo-card">
           <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.jpg" alt="Attend a CDO event" width="300">
         </a>
-        <figcaption>Attend an event
+        <figcaption>Attend an event</figcaption>
         </figure>
 
         <figure>
         <a href="https://www.si.umich.edu/about-umsi/getting-umsi" target="_blank" class="cdo-card">
           <img src="images/UMSI_Leinweber_06032025_13.jpg" alt="Visit CDO on campus" width="300">
         </a>
-        <figcaption>Visit us on campus
+        <figcaption>Visit us on campus</figcaption>
         </figure>
 
         <figure>
         <a href="https://www.si.umich.edu/student-experience/career-development" target="_blank" class="cdo-card">
-          <img src="images/FLINT_First Day of Class_0014.jpg" alt="Learn more online" width="300">
+          <img src="images/student_using_computer_0014.jpg" alt="Learn more online" width="300">
         </a>
-        <figcaption>Learn more online
+        <figcaption>Learn more online</figcaption>
         </figure>
       </div>
     </section>
